--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <div class="header">
             <h1>高雄旅遊資訊</h1>
+            <h2 class="titleh2">最多、最齊全、最好玩的景點都在這裡！</h2>
             <div class="SelectSection">
 
                 <select id="selection">
