--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </div>
 
         <!-- 頁碼 -->
-        <!--<div class="pages"><p class="nex">NextPage</p></div>-->
         <div class="pages"><input type="button" class="btn btn-primary nex" value="Next Page"></div>
+        <div class="previouspage"><input type="button" class="btn btn-primary nex" value="Previous Page"></div>
 
         <!-- 頁尾 -->
         <div class="footer">
