--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
     <div class="wrap">
 
         <div class="header">
-            <h1>高雄旅遊資訊</h1>
+            <h1 class="animated bounce">高雄旅遊資訊</h1>
             <h2 class="titleh2">最多、最齊全、最好玩的景點都在這裡！</h2>
             <div class="SelectSection">
 
@@ -62,7 +63,7 @@
 
             </div>
         </div>
-
+        <!-- 熱門行政區 -->
         <div class="hot">
 
             <h3>熱門行政區</h3>
@@ -71,8 +72,14 @@
             <button type="button" class="btn btn-info" class="hot">新興區</button>
             <button type="button" class="btn btn-warning" class="hot">左營區</button></div>
 
+        
 
-        <div class="content" id="content">
+        <!-- 內容 -->
+        <div class="content animated fadeIn" id="content">
+            <hr class="hrs">
+                <div class="hrimg">
+                </div>
+            <hr class="hrs">
 
             <!-- 區域名 -->
             <div class="section"></div>
@@ -94,7 +101,7 @@
 
         <!-- 滾到最上面 -->
         <div class="totop">
-            <a href="#content"><img src="img/btn_goTop.png"></a>
+            
         </div>
 
 
